--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ de/vorlesung/projekt/teamKoma/src/debug
 de/vorlesung/projekt/teamKoma/src/main/debug
 *.log
 de/vorlesung/projekt/teamKoma/log/main.go.log
+de/vorlesung/projekt/teamKoma/pkg/windows_amd64/logging.a
